# secops-remidiation-python

./: .gitignore  .pylintrc  COPYRIGHT  README.md  dev_requirements.txt  init  install  requirements.txt  setup.cfg
.circleci/: config.yml
app/: main.py  rule_executor.py
app/remediation/aws/cloudtrail/: duplicatted_global_services_logging.py  no_data_logging.py  no_global_services_logging.py  no_log_file_validation.py  no_logging.py  not_configured.py
app/remediation/aws/cloudwatch/: alarm_without_actions.py
app/remediation/aws/ec2/: default_security_group_in_use.py  ebs_volume_not_encrypted.py  instance_in_security_group.py  instance_type.py  instance_types.py  instance_with_public_ip.py  security_group_opens_all_ports.py  sg_opens_all_port_to_all_egress.py  sg_opens_all_ports_to_all_ingress.py  sg_opens_plaintext_port.py  sg_whitelist_aws_ip_from_banned_region.py  sg_whitelists_unkonwn_aws.py  unused_security_group.py
app/remediation/aws/elb/: no_access_logs.py  v2_no_access_logs.py  v2_no_deletion_protection.py  v2_older_ssl_policy.py
app/remediation/aws/iam/: assume_role_lacks_external_id_and_mfa.py  assume_role_no_mfa.py  assume_role_policy_allows_all.py  ec2_role_without_instances.py  group_with_inline_policies.py  inline_ploicy_allow_non_sts_action.py  inline_policy_allows_notactions.py  managed_policy_allow_non_sts_action.py  managed_policy_allows_not_actions.py  password_no_number_required.py  password_no_symbol_required.py  password_policy_expiration_threshold.py  role_with_inline_policies.py  (+16 more)
dev-scripts/: build  build-python
tests/: dummy_test.py
(+118 files in other folders)
