[metadata]
name = python-secops-remidiation
version = 0.1
author = phani kumar palaparthi
author-email = phanikum@netapp.com.com
summary = Secops remidiation python scripts
description-file = README.md
home-page = https://github.com/keathmilligan/python-boilerplate
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
# install_requires =  TODO: list your dependencies here
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel

[options.packages.find]
exclude = tests

[build_sphinx]
project =Spot-Security-Remidiation
release = 0.1.0
copyright = Copyright 2021 NetApp
config-dir = docs

[aliases]
test=pytest
